@@ -3,6 +3,8 @@
  */
 package com.jpaulmorrison.fbp.examples.networks;
 
+import com.jpaulmorrison.fbp.core.components.io.ReadFile;
+
 /* 
  * Useful info:  http://stackoverflow.com/questions/18900187/processing-how-to-send-data-through-websockets-to-javascript-application
  * 
@@ -12,6 +14,9 @@ package com.jpaulmorrison.fbp.examples.networks;
 
 import com.jpaulmorrison.fbp.core.components.routing.LoadBalance;
 import com.jpaulmorrison.fbp.core.components.routing.RandomDelay;
+
+import java.io.File;
+
 import com.jpaulmorrison.fbp.components.WebSocketReceive;
 import com.jpaulmorrison.fbp.components.WebSocketRespond;
 import com.jpaulmorrison.fbp.core.engine.Network;
@@ -32,6 +37,8 @@ public class TestWebSockets extends Network {
 		int multiplexNo = 6;
 		component("WSRcv", WebSocketReceive.class);
 		component("LBal", LoadBalance.class);
+		component("TLSParmRead", ReadFile.class);
+		
 		for (int i = 0; i < multiplexNo; i++) {
 			component("Process" + i, WebSocketSimProc.class);
 			component("WSRsp" + i, WebSocketRespond.class);
@@ -39,8 +46,11 @@ public class TestWebSockets extends Network {
 		}
 
 		
-		initialize(new Integer(8887), "WSRcv.PORT");
-		initialize("TLS", "WSRcv.OPT");
+		initialize(Integer.valueOf(8887), "WSRcv.PORT");
+		//initialize("TLS", "WSRcv.OPT");
+		connect("TLSParmRead.OUT", "WSRcv.OPT");
+		initialize("C:\\Users" + File.separator + System.getProperty("user.name") + File.separator + "tlsparmfile.txt", "TLSParmRead.SOURCE");
+		connect("TLSParmRead.*", "WSRcv.*");
 
 
 		connect("WSRcv.OUT", "LBal.IN", 4);
